src/core/css/hover-effects/captions.css
/* Caption Styles */
.foogallery .fg-caption {
	visibility: hidden;
	opacity: 0;
	background-color: rgba(0,0,0,0.6);
	color: #fff;
	position: absolute;
	z-index: 8;
	width: 100%;
	max-height: 100%;
	overflow: hidden;
	font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
	font-size: 13px;
	font-weight: 400;
	line-height: 1.3;
	border: none;
	text-align: center;
	cursor: pointer;
}

.foogallery .fg-caption-title {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	font-size: 16px;
	font-weight: 400;
	padding: 5px;
}
.foogallery .fg-caption-desc {
	padding: 5px;
}
.foogallery .fg-caption-title+.fg-caption-desc {
	padding-top: 0;
}

/* Always */
.foogallery.fg-caption-always .fg-caption .fg-caption-inner:before {
	display: none;
}
.foogallery.fg-caption-always .fg-item-inner .fg-caption {
	left: 0;
	bottom: 0;
	transition-timing-function: ease;
	transition-duration: 300ms;
	transition-property: visibility, opacity;
	visibility: visible;
	opacity: 1;
	text-align: left;
}

